adding google auth2 handler

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -46,6 +46,9 @@
         <li ng-if="!isLoggedIn()">
           <a href="#/login">Login</a>
         </li>
+        <li>
+          <a href="#/login_google">Login With Google</a>
+        </li>
       </ul>
     </nav>
   </div>
@@ -74,6 +77,7 @@
 <script src="/static/js/config.js"></script>
 <script src="/static/js/services.js"></script>
 <script src="/static/js/controllers/login.js"></script>
+<script src="/static/js/controllers/login_google.js"></script>
 <script src="/static/js/controllers/controllers.js"></script>
 
 
