logging to solve google

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -47,7 +47,7 @@
           <a href="#/login">Login</a>
         </li>
         <li>
-          <a href="#/login_google">Login With Google</a>
+          <a href="/api/auth/google">Login With Google</a>
         </li>
       </ul>
     </nav>
