--- a/src/client/partials/home.html
+++ b/src/client/partials/home.html
@@ -1,9 +1,12 @@
 <div>
   <h3>Home</h3>
   Name of controller:{{controllerName}}
+  <div class="well"><input ng-model="q" placeholder="search" >
+    <a href="#/add/lesson">Add Lesson</a></div>
   <table class="table">
     <tr ng-repeat="lesson in lessons">
       <td><a href="#/lesson/{{lesson.slug}}">{{lesson.title}}</a></td>
+      <td><a href="#/edit/lesson/{{lesson.slug}}">Edit</a></td>
       <td>{{lesson.owner}}</td>
     </tr>
   </table>
