adding exercise viewer

--- a/src/client/partials/home.html
+++ b/src/client/partials/home.html
@@ -21,7 +21,7 @@
 <a href="#/add/lesson">Add Lesson</a></div>
 <table class="table">
   <tr ng-repeat="lesson in lessons|filter:q">
-    <td><a href="#/lesson/{{lesson.slug}}">{{lesson.title}}</a></td>
+    <td><a href="#/lesson/{{lesson.slug}}/0">{{lesson.title}}</a></td>
     <td><a href="#/edit/lesson/{{lesson.slug}}">Edit</a></td>
     <td>{{lesson.owner}}</td>
   </tr>
