--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -89,6 +89,7 @@ angular.module('sllp.app').config(function($httpProvider) {
 <script src="/static/js/controllers/controllers.js"></script>
 <script src="/static/js/controllers/lesson.js"></script>
 <script src="/static/js/controllers/home.js"></script>
+<script src="/static/js/controllers/exercise.js"></script>
 
 
 </body>
