adding exercise directives first trial

--- a/src/client/partials/home.html
+++ b/src/client/partials/home.html
@@ -31,3 +31,10 @@
   {{user}}
 </div>
 
+
+<div>
+  <edit-complete exercise="exercise"></edit-complete>
+</div>
+<div>
+  <preview-complete exercise="exercise"></preview-complete>
+</div>
