--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -92,5 +92,10 @@ angular.module('sllp.app').config(function($httpProvider) {
 <script src="/static/js/controllers/exercise.js"></script>
 
 
+<script src="/static/js/directives/complete.js"></script>
+
+
+
+
 </body>
 </html>
