more exercise types directives

--- a/src/client/partials/exercise.html
+++ b/src/client/partials/exercise.html
@@ -3,6 +3,7 @@
   <div>Name:{{exercise.name}}</div>
   <div>type:{{exercise.type}}</div>
   <div>TODO: here should come the exercise directive</div>
+  <preview-complete exercise="exercise"></preview-complete>
   <div>{{exid}}</div>
 </div>
 <ul class="pagination">
