--- a/src/client/partials/directives/text/edit.html
+++ b/src/client/partials/directives/text/edit.html
@@ -1,5 +1,4 @@
-<div class="list">
+<div>Edit Text</div>
 <label class="item item-input item-input-inset">
-    <textarea placeholder="Text" ng-model="exercise.txt" ></textarea>
+    <textarea placeholder="Text" ng-model="exercise.text" ></textarea>
 </label>
-</div>
