--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -94,6 +94,11 @@ angular.module('sllp.app').config(function($httpProvider) {
 
 
 <script src="/static/js/directives/complete.js"></script>
+<script src="/static/js/directives/match.js"></script>
+<script src="/static/js/directives/mix.js"></script>
+<script src="/static/js/directives/question.js"></script>
+<script src="/static/js/directives/vocabulary.js"></script>
+<script src="/static/js/directives/text.js"></script>
 
 
 
