--- a/src/client/partials/directives/mix/edit.html
+++ b/src/client/partials/directives/mix/edit.html
@@ -1,1 +1,2 @@
-<input placeholder="sentence" ng-model="item.text" />
+<input placeholder="sentence" ng-model="exercise.text" />
+<input placeholder="distraction" ng-model="exercise.distraction" />
