--- a/src/client/partials/directives/vocabulary/preview.html
+++ b/src/client/partials/directives/vocabulary/preview.html
@@ -1,6 +1,6 @@
 <div class="list list inset">
   <div class="item row" ng-repeat="item in exercise.items">
-    <div class="col col-50">{{item.part1}} </div>
-    <div class="col col-50">{{item.part2}} </div>
+    <div class="col col-50">{{item.term}} </div>
+    <div class="col col-50">{{item.translation}} </div>
   </div>
 </div>
