--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-  <title>mongodb-tornado-angular</title>
+  <title>Social Language Learning Platform</title>
   <meta name="generator" content="mongodb-tornado-angular"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
