template instead of templateUrl for cache issues

--- a/src/client/partials/directives/match/preview.html
+++ b/src/client/partials/directives/match/preview.html
@@ -1,6 +1,6 @@
-<div class="list list inset">
-  <div class="item row" ng-repeat="item in exercise.items">
-    <div class="col col-50">{{item.part1}} </div>
-    <div class="col col-50">{{item.part2}} </div>
-  </div>
-</div>
+<table class="table">
+  <tr ng-repeat="item in exercise.items">
+    <td>{{item.part1}}</td>
+    <td>{{item.part2}}</td>
+  </tr>
+</table>
