--- a/src/client/partials/exercise.html
+++ b/src/client/partials/exercise.html
@@ -1,21 +1,6 @@
-<h3>{{lesson.title}}</h3>
-<div class="well">
-  <div>Name:{{exercise.name}}</div>
-  <div>type:{{exercise.type}}</div>
-  <div>
-      <preview-complete ng-if="exercise.type=='complete'" exercise="exercise"></preview-complete>
+<h3>Lesson: {{lesson.title}}</h3>
 
-      <preview-match ng-if="exercise.type=='match'" exercise="exercise"></preview-match>
 
-      <preview-mix ng-if="exercise.type=='mix'" exercise="exercise"></preview-mix>
-
-      <preview-text ng-if="exercise.type=='text' && !exercise.editState "></preview-text>
-
-      <preview-question ng-if="exercise.type=='question'" exercise="exercise"></preview-question>
-
-      <preview-vocabulary ng-if="exercise.type=='vocabulary'" exercise="exercise"></preview-vocabulary>
-  </div>
-</div>
 <ul class="pagination">
   <li title="{{exercise.name}}" ng-class="{active:$index == exid - 1}"
       ng-repeat="exercise in lesson.exercises track by $index">
@@ -23,4 +8,22 @@
   </li>
 </ul>
 
+<div class="well">
 
+  <preview-complete ng-if="exercise.type=='complete'" exercise="exercise"></preview-complete>
+  <preview-match ng-if="exercise.type=='match'" exercise="exercise"></preview-match>
+  <preview-mix ng-if="exercise.type=='mix'" exercise="exercise"></preview-mix>
+  <preview-text ng-if="exercise.type=='text'"></preview-text>
+  <preview-question ng-if="exercise.type=='question'" exercise="exercise"></preview-question>
+  <preview-vocabulary ng-if="exercise.type=='vocabulary'" exercise="exercise"></preview-vocabulary>
+</div>
+
+<div class="btn-group">
+    <button ng-click="prevExercise()" class="btn btn-info">Prev</button>
+    <button ng-click="nextExercise()" class="btn btn-info">Next</button>
+ </div>
+
+
+<div>Debug</div>
+<div>{{exercise}}</div>
+<div>{{lesson}}</div>
