Debug: Basic Video Exercise

--- a/src/client/partials/directives/video/edit.html
+++ b/src/client/partials/directives/video/edit.html
@@ -1,3 +1,3 @@
 <div class="list-inset">
-    <input placeholder="video url" ng-model="exercise.txt" />
+    <input placeholder="video url" ng-model="exercise.videoUrl" />
 </div>
