--- a/src/client/partials/home.html
+++ b/src/client/partials/home.html
@@ -26,3 +26,10 @@
     <td>{{lesson.owner}}</td>
   </tr>
 </table>
+
+
+<div>Exepriments with youtube </div>
+<youtube-video playerId="YtId" video-url="yurl"></youtube-video>
+<div>{{yEvent}}</div>
+<div>{{videoTime}}</div>
+<button ng-click="videoTime = getTime()">getTime</button>
