--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -70,6 +70,7 @@
 <!-- ui.bootstrap from cdn -->
 <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.10.0/ui-bootstrap-tpls.js"></script>
 
+<script src="/static/bower_components/angular-youtube-mb/dist/angular-youtube-embed.min.js"></script>
 
 
 <!-- App Code and controllers -->
@@ -99,6 +100,7 @@ angular.module('sllp.app').config(function($httpProvider) {
 <script src="/static/js/directives/question.js"></script>
 <script src="/static/js/directives/text.js"></script>
 <script src="/static/js/directives/vocabulary.js"></script>
+<script src="/static/js/directives/video.js"></script>
 
 
 
