Added tags - some error in lesson

--- a/src/client/partials/exercise.html
+++ b/src/client/partials/exercise.html
@@ -16,6 +16,7 @@
   <preview-text ng-if="exercise.type=='text'"></preview-text>
   <preview-question ng-if="exercise.type=='question'" exercise="exercise"></preview-question>
   <preview-vocabulary ng-if="exercise.type=='vocabulary'" exercise="exercise"></preview-vocabulary>
+  <preview-video ng-if="exercise.type=='video'" exercise="exercise"></preview-video>
 </div>
 
 <div class="btn-group">
