--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -8,6 +8,9 @@
 
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
 
+  <link rel="stylesheet" type="text/css" href="/static/bower_components/ng-tags-input/ng-tags-input.min.css">
+
+
   <style type="text/css">
     header {
       margin-bottom: 30px;
@@ -70,11 +73,12 @@
 <!-- ui.bootstrap from cdn -->
 <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.10.0/ui-bootstrap-tpls.js"></script>
 
+<!-- External Components -->
 <script src="/static/bower_components/angular-youtube-mb/dist/angular-youtube-embed.min.js"></script>
+<script src="/static/bower_components/ng-tags-input/ng-tags-input.min.js"></script>
 
 
 <!-- App Code and controllers -->
-
 
 <script src="/static/js/app.js"></script>
 <script>
