continueing with tags

--- a/src/client/partials/lesson_edit.html
+++ b/src/client/partials/lesson_edit.html
@@ -25,8 +25,8 @@
 
   <div class="form-group">
   <label for="tags">Tags</label>
-  <tags-input id="tags"   ng-model="lesson.tags">
-    <auto-complete source="loadTags($query)"></auto-complete>
+  <tags-input id="tags" onTagAdded="addTag($tag)" ng-model="lesson.tags">
+    <auto-complete  source="loadTags($query)"></auto-complete>
   </tags-input>
   </div>
 
