--- a/src/client/partials/directives/complete/edit.html
+++ b/src/client/partials/directives/complete/edit.html
@@ -1,14 +1,8 @@
-<div class="row">
-  <div class="col col-33">
-    <input placeholder="part 1" ng-model="exercise.part1"  />
-  </div>
-  <div class="col col-33">
-    <input placeholder="correct"  ng-model="exercise.option1"  />
-    <input placeholder="option 2" ng-model="exercise.option2"  />
-    <input placeholder="option 3" ng-model="exercise.option3"  />
-    <input placeholder="option 4" ng-model="exercise.option4"  />
-  </div>
-  <div class="col col-33">
-  <input placeholder="part 2" ng-model="exercise.part2"  />
-  </div>
-</div>
+<span ng-repeat="item in exercise.items">
+  <span ng-if="item.type=='txt'"><input ng-model="item.val"></span>
+  <span ng-if="item.type=='select'">
+    <div ng-repeat="o in item.options">
+      <input  ng-model="o.val"><input type="checkbox" ng-model="o.correct">
+    </div>
+  </span>
+</span>
