--- a/src/client/partials/lesson_edit.html
+++ b/src/client/partials/lesson_edit.html
@@ -36,8 +36,8 @@
 <table class="table">
   <thead>
   <tr>
-    <td>Edit</td>
-    <td>Preview</td>
+    <td class="col-md-6">Edit</td>
+    <td class="col-md-6">Preview</td>
   </tr>
   </thead>
   <tr ng-repeat="exercise in lesson.exercises">
